Closed Bug 1362847 Opened 8 years ago Closed 8 years ago

Headless no longer works on non-Linux Gtk platforms

Categories

(Firefox :: General, defect)

Unspecified
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Firefox 55
Tracking Status
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

(Keywords: regression)

Attachments

(1 file)

Headless appears to be implemented for all Gtk platforms (Linux, BSDs, Solaris, Darwin/X11), so the following used to work fine. Bug 1359480 mentions issues Tier1 platforms but except Linux other Gtk platforms are Tier3. $ MOZ_HEADLESS=1 firefox -new-instance -P test https://example.com/ Error: headless mode is not currently supported on this platform.
Attachment #8865204 - Flags: review?(bdahl) → review+
Keywords: checkin-needed
Pushed by bdahl@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6cd198caa3e6 Allow headless on other Gtk platforms. r=bdahl
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 55
Assignee: nobody → jbeich
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: