Bug 1362847 - Allow headless on other Gtk platforms. r=bdahl

MozReview-Commit-ID: 9NRiPQA73ov